Fix vertical overflow on mobile when zoomed in

--- a/lobby/static/sass/base.sass
+++ b/lobby/static/sass/base.sass
@@ -12,7 +12,7 @@ a:focus, a:active
 
 
 html
-  height: 100%
+  height: 100dvh
   width: 100%
   overflow: hidden
 
@@ -23,7 +23,7 @@ body
   font-family: sans-serif
   background-color: #2d5373 //hsl(200, 25%, 60%)
   background-image: url("../images/background.png")
-  height: 100%
+  height: 100dvh
   width: 100%
   color: white
   overflow: hidden
@@ -890,11 +890,11 @@ td:hover span[title]::after, .show-discord-names span[title]::after
 
 @media (min-width:768px)
   #room-form
-    height: calc(100vh - 4em)
+    height: calc(100dvh - 4em)
 
 @media (max-width:768px)
   #room-form
-    height: calc(100vh - 5em)
+    height: calc(100dvh - 5em)
 
 #option-pages
   overflow: auto
@@ -992,7 +992,7 @@ td:hover span[title]::after, .show-discord-names span[title]::after
 
 @media (min-width: 768px)
   #options-form
-    height: calc(100vh - 4.5em)
+    height: calc(100dvh - 4.5em)
 
 @media (max-width: 768px)
   #options-form
